--- a/ProyectoTLS/src/inf/pucp/edu/pe/vista/simulacion/Simulacion.form
+++ b/ProyectoTLS/src/inf/pucp/edu/pe/vista/simulacion/Simulacion.form
@@ -27,10 +27,7 @@
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" alignment="0" attributes="0">
-              <Component id="jPanel1" min="-2" pref="657" max="-2" attributes="0"/>
-              <EmptySpace min="0" pref="90" max="32767" attributes="0"/>
-          </Group>
+          <Component id="jPanel1" alignment="0" pref="759" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
   </Layout>
@@ -246,7 +243,7 @@
                           <Component id="lPosicionY" alignment="0" min="-2" max="-2" attributes="0"/>
                           <Component id="lPosicionX" alignment="0" min="-2" max="-2" attributes="0"/>
                           <Component id="lZona" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="jLabel2" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="lblEscala" alignment="0" min="-2" max="-2" attributes="0"/>
                           <Component id="jLabel3" alignment="0" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace max="32767" attributes="0"/>
@@ -257,7 +254,7 @@
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="1" attributes="0">
                       <EmptySpace max="32767" attributes="0"/>
-                      <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
+                      <Component id="lblEscala" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Component id="lZona" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
@@ -300,7 +297,7 @@
                 <Property name="text" type="java.lang.String" value="Zona:     1 "/>
               </Properties>
             </Component>
-            <Component class="javax.swing.JLabel" name="jLabel2">
+            <Component class="javax.swing.JLabel" name="lblEscala">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Escala del Mapa: 1 : 20"/>
               </Properties>
